<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
<!--TODO:fix the highlighted menu item-->
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/menu_icon"/>

        <item
            android:id="@+id/nav_add"
            android:title="@string/add"
            android:icon="@drawable/add_icon"/>

        <item
            android:id="@+id/nav_edit"
            android:title="@string/edit"
            android:icon="@drawable/edit_icon"/>

        <item
            android:id="@+id/nav_delete"
            android:title="@string/delete"
            android:icon="@drawable/delete_icon"/>
    </group>

    <item android:title="Profile">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_logout"
                    android:title="Logout"
                    android:icon="@drawable/logout_icon"/>

            </group>

        </menu>
    </item>

</menu>