<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddReminderActivity"
    android:padding="20dp"
    android:background="@color/Primary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addingremtitleview"
        android:text="@string/addremindertop"
        android:textColor="@color/Secondary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addremtitleinput"
            android:hint="@string/addremtitle"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColorHint="@color/Secondary"
            android:textColor="@color/Secondary"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addremdescinput"
            android:hint="@string/addremdesc"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColorHint="@color/Secondary"
            android:textColor="@color/Secondary"
            android:lines="5"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addremdateinput"
            android:hint="@string/addremdate"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColorHint="@color/Secondary"
            android:textColor="@color/Secondary" />
        
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saverembtn"
        android:text="@string/saverembtn"
        android:layout_gravity="center"
        android:backgroundTint="@color/Secondary"
        android:textColor="@color/Primary"/>

</LinearLayout>